<resources>
    <!-- App general -->
    <string name="app_name">CarWorkshop</string>
    <string name="date_format">yyyy-MM-dd\'T\'HH:mm:ss\'Z\'</string>
    <string name="class_cast"> must implement ConfirmCloseListener</string>

    <!-- Option items menu -->
    <string name="action_refresh">Refresh</string>
    <string name="action_sync">Sync</string>

    <!-- Activity's titles -->
    <string name="main_title">Список задач</string>
    <string name="info_title">Информация о задаче</string>
    <string name="task_title">Новая задача</string>

    <!-- Intents -->
    <string name="task_intent">Task</string>

    <!-- Task statuses -->
    <string name="closed">Закрыта</string>
    <string name="opened">Открыта</string>

    <!-- TextView's texts -->
    <string name="vin">VIN</string>
    <string name="mark">Марка</string>
    <string name="model">Модель</string>
    <string name="number">Гос. номер</string>
    <string name="works">Работы:</string>
    <string name="add_work">Выбрать работы</string>
    <string name="save_task">Сохранить задачу</string>
    <string name="close_job">Close Job</string>
    <string name="date">Дата</string>
    <string name="status">Статус</string>
    <string name="empty_list">Не удалось загрузить данные.\nПроверьте подключение к Интернету</string>
    <string name="empty_database">Can not load data\nPlease, sync local database with server</string>

    <!-- TextView's hints -->
    <string name="hint_vin">Введите VIN</string>
    <string name="hint_number">Введите гос. номер</string>

    <!-- Image button's content descriptions -->
    <string name="btn_close_task">Закрыть задачу</string>
    <string name="btn_close_job">Закрыть работу</string>
    <string name="btn_task_info">Get a task info</string>
    <string name="img_empty_list">Список задач пуст</string>
    <string name="img_arrow">Expand or collapse a task info</string>

    <!-- Buttons -->
    <string name="btn_load">Загрузить задачи</string>

    <!-- Toast messages -->
    <string name="toast_cant_load">Can\'t load tasks!</string>
    <string name="toast_invalid_date">Invalid date format!</string>
    <string name="toast_cant_close_task">Can\'t close task!</string>
    <string name="toast_cant_close_job">Can\'t close job!</string>
    <string name="all_jobs_are_closed">All jobs in this task are closed</string>
    <string name="toast_create_task">Task was created</string>
    <string name="toast_cant_create">Can\'\t create task!</string>
    <string name="sync_error_jobs">Fail to sync job list with server</string>
    <string name="sync_error_marks">Fail to sync mark list with server</string>
    <string name="sync_error_models">Fail to sync model list with server</string>

    <!-- Dialogs -->
    <string name="close_task_title">Close task</string>
    <string name="close_task_message">Are you sure to close this task?</string>
    <string name="close_job_title">Close job</string>
    <string name="close_job_message">Are you sure to close this job?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="job_is_closed">Job is closed!</string>
    <string name="task_is_closed">Task is closed!</string>
    <string name="task_was_closed">This task was closed</string>
    <string name="task_full_price">Full price of jobs in this task: </string>
    <string name="empty_fields_title">Empty fields</string>
    <string name="empty_fields_message">Please, enter VIN and car number.</string>
    <string name="invalid_vin_title">Invalid VIN</string>
    <string name="invalid_vin_message">VIN length should be equal to 17!</string>
    <string name="invalid_number_title">Invalid number</string>
    <string name="invalid_number_message">Number length should be between 6 and 9!</string>
    <string name="empty_jobs_title">Jobs was\'nt chosen</string>
    <string name="empty_jobs_message">Please, choose jobs for this task.</string>
    <string name="conn_error_title">Connection error</string>
    <string name="conn_error_message">Can not connect to server.\nPlease, check the Internet connection.</string>
</resources>
