<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="false"
    android:clipChildren="false"
    app:columnCount="2"
    app:useDefaultMargins="true"
    tools:context="com.dsr_practice.car_workshop.activities.TaskActivity">

    <TextView
        android:id="@+id/tvStatusName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_columnWeight="1"
        android:gravity="center"
        android:text="@string/status"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_columnWeight="1"
        android:gravity="center"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvVinName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_columnWeight="1"
        android:gravity="center"
        android:text="@string/vin"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/tvVIN"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_columnWeight="1"
        android:gravity="center"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/tvMarkName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_columnWeight="1"
        android:gravity="center"
        android:text="@string/mark"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/tvMark"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_columnWeight="1"
        android:gravity="center"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/tvModelName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_columnWeight="1"
        android:gravity="center"
        android:text="@string/model"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/tvModel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_columnWeight="1"
        android:gravity="center" />

    <TextView
        android:id="@+id/tvDateName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_columnWeight="1"
        android:gravity="center"
        android:text="@string/date"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_columnWeight="1"
        android:gravity="center"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/tvNumberName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_columnWeight="1"
        android:gravity="center"
        android:text="@string/number"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/tvNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_columnWeight="1"
        android:gravity="center" />

</android.support.v7.widget.GridLayout>