<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="false"
        android:clipChildren="false"
        app:columnCount="2"
        app:useDefaultMargins="true"
        tools:context="com.dsr_practice.car_workshop.activities.TaskActivity">

        <!-- VIN -->
        <TextView
            android:id="@+id/tvVIN"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/task_item_height"
            android:gravity="start|center_vertical"
            android:text="@string/vin"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_gravity="fill" />

        <EditText
            android:id="@+id/etVIN"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/task_item_height"
            android:inputType="text"
            android:digits="wertyupasdfghjklzxcvbnm0123456789"
            android:maxLength="17"
            app:layout_gravity="fill" />

        <!-- Mark -->
        <TextView
            android:id="@+id/tvMark"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/task_item_height"
            android:gravity="start|center_vertical"
            android:text="@string/mark"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_gravity="fill" />

        <Spinner
            android:id="@+id/spinnerMark"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/task_item_height"
            android:spinnerMode="dialog"
            app:layout_gravity="fill" />

        <!-- Model -->
        <TextView
            android:id="@+id/tvModel"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/task_item_height"
            android:enabled="false"
            android:gravity="start|center_vertical"
            android:text="@string/model"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_gravity="fill" />

        <Spinner
            android:id="@+id/spinnerModel"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/task_item_height"
            android:spinnerMode="dialog"
            android:visibility="visible"
            app:layout_gravity="fill" />

        <!-- Number -->
        <TextView
            android:id="@+id/tvNumber"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/task_item_height"
            android:gravity="start|center_vertical"
            android:text="@string/number"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_gravity="fill" />

        <EditText
            android:id="@+id/etNumber"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/task_item_height"
            android:ems="10"
            android:inputType="text"
            android:digits="укенхваросмт0123456789"
            android:maxLength="9"
            app:layout_gravity="fill" />

        <!-- Work list -->
        <TextView
            android:id="@+id/tvWorks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:text="@string/works"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_gravity="fill" />

        <!-- Add work option -->
        <Button
            android:id="@+id/btnAddWork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_gravity="center"
            android:text="@string/add_work" />

        <TextView
            android:id="@+id/tvWorkList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:maxLines="9"
            android:minLines="1"
            android:textColor="@android:color/black"
            app:layout_columnSpan="2"
            app:layout_gravity="fill" />

    </android.support.v7.widget.GridLayout>
</ScrollView>